force-app/main/default/objects/Account_Campaign_Junction__c/Account_Campaign_Junction__c.object-meta.xml
<CustomObject>
    <label>Account Campaign Junction</label>
    <nameField>
        <displayFormat>ACJ-{0000000}</displayFormat>
        <label>Account to Campaign Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Campaign Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>