force-app/main/default/objects/Account_Campaign_Junction__c/fields/Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Text__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Text</label>
    <type>Text</type>
</CustomField>